fixed issue with grid where things weren't aligning properly on records

--- a/resources/assets/scss/modules/_helpers.scss
+++ b/resources/assets/scss/modules/_helpers.scss
@@ -19,6 +19,9 @@ em.bold {
 .justify-center {
   justify-content: center;
 }
+.align-items-center {
+  align-items: center;
+}
 
 .block {
   display: block;
